--- a/table.html
+++ b/table.html
@@ -11,13 +11,13 @@
         <!-- Table : conteneur de lignes et de colonnes -->
         <table>
             <thead>
-                <tr>
-                    <th>Id</th>
-                    <th onclick="sortTableOnName();">Nom</th>
-                    <th>Prénom</th>
-                    <th>Téléphone</th>
-                    <th>E-Mail</th>
-                </tr>
+                <!-- <tr> -->
+                    <!-- <th>Id</th> -->
+                    <!-- <th onclick="sortTableOnName();">Nom</th> -->
+                    <!-- <th>Prénom</th> -->
+                    <!-- <th>Téléphone</th> -->
+                    <!-- <th>E-Mail</th> -->
+                <!-- </tr> -->
             </thead>
 
             <tbody></tbody>
